--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Lista de Cursos de DevOps de Alura </title>
+     <title> Lista de cursos de DevOps de Alura </title>
 </head>
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker </li>
+         <li> Docker</li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y productividad en el desarrollo de software. </li>
      </ul>
