--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
+         <li> Vagrant: gerenciando maquinas virtuales </li>
          <li> Docker</li>
+         <li> Docker : Creando containers sin dolor de cabeza. </li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y productividad en el desarrollo de software. </li>
      </ul>
